<resources>
    <string name="app_name">Task</string>
    <string name="signup">signup</string>
    <string name="login">login</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="type_password">Type password</string>
    <string name="username">username</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
</resources>